--- a/GrowMe!/Base.lproj/Main.storyboard
+++ b/GrowMe!/Base.lproj/Main.storyboard
@@ -1292,7 +1292,7 @@
                                     <constraint firstItem="K0X-10-zmd" firstAttribute="bottom" secondItem="hzT-T2-Sgc" secondAttribute="bottom" id="58o-75-I4s"/>
                                     <constraint firstItem="hzT-T2-Sgc" firstAttribute="leading" secondItem="Tmb-u0-RHp" secondAttribute="trailing" constant="8" symbolic="YES" id="CjD-vg-5pJ"/>
                                     <constraint firstAttribute="bottom" secondItem="vxq-1Y-EiE" secondAttribute="bottom" constant="27" id="Dfz-kN-0MC"/>
-                                    <constraint firstAttribute="trailing" secondItem="Gox-7c-1DZ" secondAttribute="trailing" constant="294" id="IIw-HD-rmN"/>
+                                    <constraint firstAttribute="trailing" secondItem="Gox-7c-1DZ" secondAttribute="trailing" constant="150" id="IIw-HD-rmN"/>
                                     <constraint firstItem="fEI-gd-o7x" firstAttribute="bottom" secondItem="SyV-qG-xWK" secondAttribute="bottom" id="IbC-Gf-dXb"/>
                                     <constraint firstItem="K0X-10-zmd" firstAttribute="leading" secondItem="hzT-T2-Sgc" secondAttribute="trailing" constant="8" symbolic="YES" id="JIS-k3-enl"/>
                                     <constraint firstItem="SyV-qG-xWK" firstAttribute="bottom" secondItem="Tmb-u0-RHp" secondAttribute="bottom" id="LiS-Tj-3eB"/>
@@ -1356,6 +1356,6 @@
         <image name="TreeShrub" width="120" height="120"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="eXG-s3-Hhh"/>
+        <segue reference="GSZ-e4-0Z5"/>
     </inferredMetricsTieBreakers>
 </document>
